	  authenticated user name. (Bug #798)
	- [Minor] IP-Filter 4.0 support in --enable-ipf-transparent
	- [Minor] Support interception of multiple ports
	- [Cosmetic] Allow "squid -k ..." to run even if the local hostname
	  can not be determined (Bug #1196)
	- [Cosmetic] Configuration file parser now handles DOS/Windows formatted
	  configuration files with CRLF lineendings proper.
	
Changes to squid-2.5.STABLE9 (24 Feb 2005)

	- [Medium] Don't retry requests on 403 errors (Bug #1210)
	- [Minor] Ignore invalid FQDN DNS responses (Bug #1222)
	- [Minor] cache_peer related memory leaks on reconfigure (Bug #1246)
	- [Cosmetic] Adjusted to build cleanly with GCC-4 (Bug #1211)
	- [Minor] relaxed_header_parser extended to work around even more
	  broken web servers (Bug #1242)
	- [Minor] FTP gatewaying URLs cleaned up slightly, mainly to work
	  better with Mozilla but also to improve security slightly on
	  non-anonymous FTP.
	- [Minor] High characters allowed un-encoded in FTP and Gopher
	  listings to allow the user-agent to display data in non-iso8859-1
	  charsets. (Bug #1220)
	- [Cosmetic] format fixes to silence compiler warnings on many
	  platforms.
	- [Major] Assertion failures on certain odd DNS responses (Bug #1234)

Changes to squid-2.5.STABLE8 (11 Feb 2005)

	- [Minor] 100% CPU usage on half-closed PUT/POST requests (Bug #354,
	  #1096)
	- [Cosmetic] Document -v (protocol version) option to LDAP helpers
	- [Minor] The new req_header and resp_header acls segfaults
	  immediately on parse of squid.conf (Bug #961)
	- [Minor] Failure to shut down busy helpers on -k rotate/reconfigure
	  (Bug #1118)
	- [Minor] Don't use O_NONBLOCK on disk files. (Bug #1102)
	- [Minor] Squid fails to close TCP connection after blank HTTP
	  response (Bug #1116)
	- [Minor security] Random error messages in response to malformed
	  host name (Bug #1143)
	- [Minor] PURGE should not be able to delete internal objects
	  (Bug #1112)